test/fixtures/parse_errors/invalidOctal.ion
invalidOctal = 012345678